; ModuleID = '/home/carl/AnghaBench/openvpn/tests/unit_tests/openvpn/extr_test_buffer.c_test_buffer_list_teardown.c'
source_filename = "/home/carl/AnghaBench/openvpn/tests/unit_tests/openvpn/extr_test_buffer.c_test_buffer_list_teardown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.test_buffer_list_aggregate_ctx = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**)* @test_buffer_list_teardown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_buffer_list_teardown(i8** %0) #0 {
  %2 = alloca i8**, align 8
  %3 = alloca %struct.test_buffer_list_aggregate_ctx*, align 8
  store i8** %0, i8*** %2, align 8
  %4 = load i8**, i8*** %2, align 8
  %5 = load i8*, i8** %4, align 8
  %6 = bitcast i8* %5 to %struct.test_buffer_list_aggregate_ctx*
  store %struct.test_buffer_list_aggregate_ctx* %6, %struct.test_buffer_list_aggregate_ctx** %3, align 8
  %7 = load %struct.test_buffer_list_aggregate_ctx*, %struct.test_buffer_list_aggregate_ctx** %3, align 8
  %8 = getelementptr inbounds %struct.test_buffer_list_aggregate_ctx, %struct.test_buffer_list_aggregate_ctx* %7, i32 0, i32 3
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @buffer_list_free(i32 %9)
  %11 = load %struct.test_buffer_list_aggregate_ctx*, %struct.test_buffer_list_aggregate_ctx** %3, align 8
  %12 = getelementptr inbounds %struct.test_buffer_list_aggregate_ctx, %struct.test_buffer_list_aggregate_ctx* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @buffer_list_free(i32 %13)
  %15 = load %struct.test_buffer_list_aggregate_ctx*, %struct.test_buffer_list_aggregate_ctx** %3, align 8
  %16 = getelementptr inbounds %struct.test_buffer_list_aggregate_ctx, %struct.test_buffer_list_aggregate_ctx* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @buffer_list_free(i32 %17)
  %19 = load %struct.test_buffer_list_aggregate_ctx*, %struct.test_buffer_list_aggregate_ctx** %3, align 8
  %20 = getelementptr inbounds %struct.test_buffer_list_aggregate_ctx, %struct.test_buffer_list_aggregate_ctx* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @buffer_list_free(i32 %21)
  %23 = load %struct.test_buffer_list_aggregate_ctx*, %struct.test_buffer_list_aggregate_ctx** %3, align 8
  %24 = call i32 @free(%struct.test_buffer_list_aggregate_ctx* %23)
  ret i32 0
}

declare dso_local i32 @buffer_list_free(i32) #1

declare dso_local i32 @free(%struct.test_buffer_list_aggregate_ctx*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
